--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <div class="col-md-4">
                 <div class="deposit status">
                     <h5>Deposit</h5>
-                    <h2>$ 00</h2>
+                    <h2>$ <span id="currentDeposit">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>$ 00</h2>
+                    <h2>$ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="balance status">
                     <h5>Balance</h5>
-                    <h2>$ 1240</h2>
+                    <h2>$ <span id="currentBalance">1240</span></h2>
                 </div>
             </div>
         </div>
@@ -44,28 +44,59 @@
             <div class="col-md-6">
                 <div class="input-balance">
                     <h4>Deposit</h4>
-                    <input type="number" placeholder="$ amount you want to deposit" class="form-control">
+                    <input type="number" id="depositNumber" placeholder="$ amount you want to deposit" class="form-control">
                     <br>
-                    <button class="btn btn-success">Deposit</button>
+                    <button id="addDeposit" class="btn btn-success">Deposit</button>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="input-balance">
                     <h4>Withdraw</h4>
-                    <input type="number" placeholder="$ amount you want to withdraw" class="form-control">
+                    <input type="number" id="withdrawNumber" placeholder="$ amount you want to withdraw" class="form-control">
                     <br>
-                    <button class="btn btn-success">Withdraw</button>
+                    <button id="addWithdraw" class="btn btn-success">Withdraw</button>
                 </div>
             </div>
         </div>
     </section>
      <script>
+        // login button event handler
         const loginBtn = document.getElementById('login');
         loginBtn.addEventListener('click', function(){
             const loginArea = document.getElementById('login-area');
             loginArea.style.display = 'none';
             const transectionArea = document.getElementById('transection-area');
             transectionArea.style.display = 'block';
+        })
+
+        function updateSpanText(id, addNumber){
+                const current = document.getElementById(id).innerText;
+                const currentNumber = parseFloat(current);
+                const totalAmount = currentNumber + addNumber;
+                document.getElementById(id).innerText = totalAmount;
+        }
+
+        // deposit button event handler
+        const deposit = document.getElementById('addDeposit').addEventListener('click', function(){
+                const  depositAmount = document.getElementById('depositNumber').value;
+                const depositNumber = parseFloat(depositAmount);
+                document.getElementById('depositNumber').value = null;
+                updateSpanText('currentDeposit', depositNumber);
+                updateSpanText('currentBalance', depositNumber)
+        })
+
+         // withdraw button event handler
+        const withdraw = document.getElementById('addWithdraw').addEventListener('click', function(){
+                const withdrawAmount = document.getElementById('withdrawNumber').value;
+                const withdrawNumber = parseFloat(withdrawAmount);
+                document.getElementById('withdrawNumber').value = null;
+                updateSpanText('currentWithdraw', withdrawNumber)
+                
+                const currentBalance = document.getElementById('currentBalance').innerText;
+                const currentBalanceNumber = parseFloat(currentBalance);
+                const totalBalance = currentBalanceNumber - withdrawNumber;
+                document.getElementById('currentBalance').innerText = totalBalance;
+
         })
      </script>
   </body>
